@startuml
scale 500 width
[*] --> ABORT
ABORT --> FILL : GOTO_FILL \n
ABORT --> TEST : GOTO_TEST
FILL --> IGNITION : \n GOTO_IGNITION \n WARNING IF VALVE STATE DIFFERENT
FILL --> ABORT : GOTO_ABORT \n WARNING IF VALVE STATE DIFFERENT
IGNITION --> FIRE : GOTO_FIRE \n IGNITORS LIVE \n 3.5 SECONDS
IGNITION --> ABORT : GOTO_ABORT
IGNITION --> FILL : GOTO_FILL
FIRE --> ABORT : GOTO_ABORT
FIRE --> POST_FIRE : FIRE COMPLETE or \n SOFT_ABORT
POST_FIRE --> FILL : GOTO_FILL
POST_FIRE --> ABORT : GOTO_ABORT
TEST --> ABORT : GOTO_ABORT \n\n

state ABORT {
  state Abort_Valve_State: PBV1: CLOSED
  state Abort_Valve_State: PBV2: OPEN
  state Abort_Valve_State: PBV3: CLOSED
  state Abort_Valve_State: PBV4: OPEN
  state Abort_Valve_State: PBV5: OPEN
  state Abort_Valve_State: PBV6: CLOSED
  state Abort_Valve_State: PBV7: CLOSED
  state Abort_Valve_State: PBV8: CLOSED
  state Abort_Valve_State: PBV9: OPEN
  state Abort_Valve_State: PBV10: CLOSED
  state Abort_Valve_State: PBV11: CLOSED

  state Abort_Valve_State: SOL1: CLOSED
  state Abort_Valve_State: SOL2: CLOSED
  state Abort_Valve_State: SOL3: CLOSED
  state Abort_Valve_State: SOL4: CLOSED
  state Abort_Valve_State: SOL5: CLOSED
  state Abort_Valve_State: SOL6: CLOSED
  state Abort_Valve_State: SOL7: CLOSED
  state Abort_Valve_State: SOL8: CLOSED
  state Abort_Valve_State: SOL9: CLOSED
  state Abort_Valve_State: SOL10: CLOSED
  state Abort_Valve_State: SOL11: OPEN
  state Abort_Valve_State: SOL12: OPEN
  state Abort_Valve_State: SOL13: CLOSED
  state Abort_Valve_State: SOL14: CLOSED


  state Abort_Valve_Control
  state Abort_Valve_Control: Manual: NONE
}

state FILL {
  state Fill_Valve_Control
  state Fill_Valve_Control: Manual: ALL
}

state IGNITION {
  state Ignition_Valve_State: PBV1: CLOSED
  state Ignition_Valve_State: PBV2: CLOSED
  state Ignition_Valve_State: PBV3: CLOSED
  state Ignition_Valve_State: PBV4: CLOSED
  state Ignition_Valve_State: PBV5: CLOSED
  state Ignition_Valve_State: PBV6: CLOSED
  state Ignition_Valve_State: PBV7: CLOSED
  state Ignition_Valve_State: PBV8: OPEN
  state Ignition_Valve_State: PBV9: CLOSED
  state Ignition_Valve_State: PBV10: CLOSED
  state Ignition_Valve_State: PBV11: CLOSED

  state Ignition_Valve_State: SOL1: CLOSED
  state Ignition_Valve_State: SOL2: CLOSED
  state Ignition_Valve_State: SOL3: OPEN
  state Ignition_Valve_State: SOL4: OPEN
  state Ignition_Valve_State: SOL5: OPEN
  state Ignition_Valve_State: SOL6: CLOSED
  state Ignition_Valve_State: SOL7: OPEN
  state Ignition_Valve_State: SOL8: OPEN
  state Ignition_Valve_State: SOL9: CLOSED
  state Ignition_Valve_State: SOL10: OPEN
  state Ignition_Valve_State: SOL11: CLOSED
  state Ignition_Valve_State: SOL12: CLOSED
  state Ignition_Valve_State: SOL13: CLOSED
  state Ignition_Valve_State: SOL14: CLOSED


  state Ignition_Valve_Control
  state Ignition_Valve_Control: Manual: NONE
}

state FIRE {
  state Fire_Valve_State: PBV6: OPEN
  state Fire_Valve_State: PBV7: OPEN
  state Fire_Valve_State: PBV10: OPEN
  state Fire_Valve_State: PBV11: OPEN

  state Fire_Valve_State: SOL13: OPEN
  state Fire_Valve_State: SOL14: OPEN

  state Fire_Valve_Control
  state Fire_Valve_Control: Manual: NONE
}

state POST_FIRE {
  state Post_Fire_Valve_State: PBV6: CLOSED
  state Post_Fire_Valve_State: PBV7: CLOSED
  state Post_Fire_Valve_State: PBV10: CLOSED
  state Post_Fire_Valve_State: PBV11: CLOSED

  state Post_Fire_Valve_State: SOL13: CLOSED
  state Post_Fire_Valve_State: SOL14: CLOSED

  state Post_Fire_Valve_Control
  state Post_Fire_Valve_Control: Manual: ALL
}


state TEST {
  state Test_Valve_Control
  state Test_Valve_Control: Manual: ALL
}
@enduml